# iterm2_shortcut_html2

./: .gitignore  README.md  metadata.json  pyproject.toml  setup.cfg
iterm2_shortcut_html2/: html_api.py  iterm2_shortcut_html2.py  py_api.py  storage.py  system_storage.py  utils.py
iterm2_shortcut_html2/api/: exec_api.py  html_api.py  py_api.py
iterm2_shortcut_html2/common/: constants.py  session_data.py  session_storage_data.py  storage_data.py  system_storage_data.py  utils.py
iterm2_shortcut_html2/html/: index.html
iterm2_shortcut_html2/html/common/: api.html  drag_width.html  draggable.html  floating_input_shell_text.html  floating_window.html  item2.html  keyboard.html  storage.html  utils.html
iterm2_shortcut_html2/html/css/: index.css
iterm2_shortcut_html2/html/html/: file_window.html  main.html  setting.html  setting_button.html  setting_button_group.html  setting_tab.html
iterm2_shortcut_html2/html/html/button_type/: setting_button_type_input_send_text.html  setting_button_type_js_button.html  setting_button_type_label.html  setting_button_type_md.html  setting_button_type_next_line.html  setting_button_type_padding.html  setting_button_type_send_text.html  (+4 more)
iterm2_shortcut_html2/html/js/: jquery.jsonview.css  jquery.jsonview.js  jquery.min.map
iterm2_shortcut_html2/osascript/: warp.scpt  warp2.scpt
iterm2_shortcut_html2/rpc/: event_rpc.py  monitor_rpc.py  status_bar2_rpc.py  status_bar_rpc.py  web_view_tool_rpc.py
iterm2_shortcut_html2/storage_history/: README.md
iterm2_shortcut_html2/test/: t_db.py  t_proxy.py
(+15 files in other folders)
